# go2-python

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  web.py
go2/: __init__.py  cli.py  commands.py  connection.py  constants.py  crypto.py  data_channel.py  server.py  signaling.py  telemetry.py
web/: app.js  index.html  styles.css
